-Configured MySQL Database & Fixed JPA Mappings